--- a/signup.html
+++ b/signup.html
@@ -1,13 +1,13 @@
 <html>
     <body>
-        <h1> Login page </h1> <br/>
+        <h1> Register Page </h1> <br/>
         <form>
             <label>Name : </label><input type="text" name="name"/><br/>
             <label>Password : </label><input type="password" name="password"/><br/>
-            <button type="submit">log in</button>
-            <a href="./signup.html">sign up</a>
+            <button type="submit">submit</button>
+            <a href="./index.html">sign up</a>
         </form>
     </body>
-    <script src="index.js"></script>
+    <script src="signup.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </html>
