--- a/login.html
+++ b/login.html
@@ -1,13 +1,14 @@
 <html>
     <body>
-        <h1>Register</h1>
+        <h1>Login page</h1>
         <form>
         <label>Name :</label><input type="text" name="name"><br/>
         <label>password :</label><input type="text" name="password"><br/>
         <button type="submit">submit</button>
         </form>
-        <a href="login.html">Login</a>
+        <a href="signup.html">Sign UP</a>
     </body>
-    <script src="./signup.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="./login.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </html>
